tests/fixtures/invalid/bytes_bitor_float.py
# Cannot bitwise OR Bytes and Float
x: float = b"hello" | 1.0
